Score entry done.

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -27,6 +27,12 @@
 			</ion-col>
 		</ion-row>
 
+		<ion-row justify-content-center align-items-center class="history">
+			<ion-col>
+				<button ion-button class="menu" (click)="GotoStats()">Statistics</button>
+			</ion-col>
+		</ion-row>
+
     </ion-grid>
  
 </ion-content>
