--- a/src/pages/score/score-card-setup/score-card-setup.html
+++ b/src/pages/score/score-card-setup/score-card-setup.html
@@ -18,6 +18,7 @@
 <ion-content no-bounce>
 
 	<ion-list no-lines *ngIf="!isEditMode">
+		<field [label]="'Status'" [value]="scoreCard.status"></field>
 		<field [label]="'Round'" [value]="scoreCard.round?.name"></field>
 		<field [label]="'Name'" [value]="scoreCard.name"></field>
 		<field-date [label]="'Date'" [value]="scoreCard.dt"></field-date>
@@ -25,7 +26,7 @@
 
 		<ion-item-divider color="archers-light-blue">
 			Shooters
-			<ion-badge color="archers-heading">{{ scoreCard.shooters?.length == 0 ? 0 : scoreCard.shooters?.length }}</ion-badge>
+			<ion-badge *ngIf="scoreCard.status=='ongoing'" color="archers-heading">{{ scoreCard.shooters?.length == 0 ? 0 : scoreCard.shooters?.length }}</ion-badge>
 		</ion-item-divider>
 
 		<ion-item *ngIf="scoreCard.shooters?.length==0">
@@ -43,9 +44,17 @@
 			</ion-item-sliding>
 		</ion-item-group>
 
-		<div *ngIf="scoreCard.status=='deleted'">
+		<div *ngIf="scoreCard.status!='ongoing'">
 			<ion-item *ngFor="let shooter of scoreCard.shooters">
-				<p>{{ shooter.name }}</p>
+				<p>{{ shooter.name }}</p><span item-end>{{ shooter.score.total_rt }}</span>
+				<p *ngIf="shooter.score.isComplete">
+					<span class="stat">Hits:</span> {{ shooter.score?.statHits }}, 
+					<span class="stat">Avg:</span> {{ shooter.score?.statAvg }}, 
+					<span class="stat">Xs:</span> {{ shooter.score?.statXs }}, 
+					<span class="stat">10s:</span> {{ shooter.score?.stat10s }}, 
+					<span class="stat">9s:</span> {{ shooter.score?.stat9s }}, 
+					<span class="stat">Ms:</span> {{ shooter.score?.statMs }}
+				</p>
 			</ion-item>
 		</div>
 		
@@ -100,8 +109,8 @@
 <ion-footer *ngIf="!isEditMode">
 	<ion-grid>
 		<ion-row>
-			<ion-col>
-				<button ion-button full color="archers-heading" (click)="GotoScores()" *ngIf="scoreCard.status!='deleted'">Goto Scores</button>
+			<ion-col *ngIf="scoreCard.status!='deleted'">
+				<button ion-button full color="archers-heading" (click)="GotoScores()">Goto Scores</button>
 			</ion-col>
 		</ion-row>
 	</ion-grid>
