--- a/src/pages/score/score-card/score-card.html
+++ b/src/pages/score/score-card/score-card.html
@@ -13,18 +13,18 @@
 	</ion-navbar>
 
 	<ion-toolbar text-center *ngIf="maxShooters > 0">
-		<button ion-button clear (click)="prev()" *ngIf="shooter_p.initials != shooter_n.initials">
+		<button ion-button clear (click)="prev()" [color]="shooter_p.score.isComplete?'secondary':''" *ngIf="shooter_p.initials != shooter_n.initials">
 			{{ shooter_p.initials }} <ion-icon name="md-arrow-back"></ion-icon>
 		</button>
-		<button ion-button outline>{{ shooter.initials }}</button>
-		<button ion-button clear (click)="next()">
+		<button ion-button outline [color]="shooter.score.isComplete?'secondary':''">{{ shooter.initials }}</button>
+		<button ion-button clear (click)="next()" [color]="shooter_n.score.isComplete?'secondary':''">
 			<ion-icon name="md-arrow-forward"></ion-icon> {{ shooter_n.initials }}
 		</button>
 	</ion-toolbar>
 
 </ion-header>
 
-<ion-content no-bounce>
+<ion-content no-bounce (swipe)="SwipeShooter($event)">
 
 	<ion-list no-lines>
 
@@ -55,7 +55,9 @@
 					<ion-grid>
 						<ion-row>
 							<ion-col class="bgcolor-heading bdr">{{ e + 1}}</ion-col>
-							<ion-col [ngClass]="{'bdr':scoreCard.round.arrows>=(a+1)}" *ngFor="let arrow of ( 6 | numberInc ); let a = index">{{ a>shooter.score.targets[t].ends[e].end.length-1?'':shooter.score.targets[t].ends[e].end[a] }}</ion-col>
+							<ion-col [ngClass]="{'bdr':scoreCard.round.arrows>=(a+1)}" *ngFor="let arrow of ( 6 | numberInc ); let a = index">
+								<span [ngClass]="GetColor(shooter.score.targets[t].ends[e].end[a])">{{ a>shooter.score.targets[t].ends[e].end.length-1?'':shooter.score.targets[t].ends[e].end[a] }}</span>
+							</ion-col>
 							<ion-col class="bgcolor-heading tr bdr">{{ a>shooter.score.targets[t].ends[e].end.length-1?'':shooter.score.targets[t].ends[e].total_et }}</ion-col>
 							<ion-col class="bgcolor-heading tr bdr">{{ a>shooter.score.targets[t].ends[e].end.length-1?'':shooter.score.targets[t].ends[e].total_rt }}</ion-col>
 						</ion-row>
@@ -84,12 +86,12 @@
 							<ion-col class=""></ion-col>
 							<ion-col class=""></ion-col>
 							<ion-col class=""></ion-col>
-							<ion-col class="bdr">Hits</ion-col>
-							<ion-col class="bdr">Avg</ion-col>
-							<ion-col class="bdr">Xs</ion-col>
-							<ion-col class="bdr">10s</ion-col>
-							<ion-col class="bdr">9s</ion-col>
-							<ion-col class="bdr">Ms</ion-col>
+							<ion-col class="bgcolor-heading bdr">Hits</ion-col>
+							<ion-col class="bgcolor-heading bdr">Avg</ion-col>
+							<ion-col class="bgcolor-heading bdr">Xs</ion-col>
+							<ion-col class="bgcolor-heading bdr">10s</ion-col>
+							<ion-col class="bgcolor-heading bdr">9s</ion-col>
+							<ion-col class="bgcolor-heading bdr">Ms</ion-col>
 						</ion-row>
 						<ion-row>
 							<ion-col class="">&nbsp;</ion-col>
@@ -109,18 +111,22 @@
 			
 		</div>
 
+		<ion-item-divider color="archers-light-blue">
+			Overall Shooter Summary
+		</ion-item-divider>
+
 		<ion-item class="end-stats">
 			<ion-grid>
 				<ion-row>
 					<ion-col class=""></ion-col>
 					<ion-col class=""></ion-col>
 					<ion-col class=""></ion-col>
-					<ion-col class="bdr">Hits</ion-col>
-					<ion-col class="bdr">Avg</ion-col>
-					<ion-col class="bdr">Xs</ion-col>
-					<ion-col class="bdr">10s</ion-col>
-					<ion-col class="bdr">9s</ion-col>
-					<ion-col class="bdr">Ms</ion-col>
+					<ion-col class="bgcolor-heading bdr">Hits</ion-col>
+					<ion-col class="bgcolor-heading bdr">Avg</ion-col>
+					<ion-col class="bgcolor-heading bdr">Xs</ion-col>
+					<ion-col class="bgcolor-heading bdr">10s</ion-col>
+					<ion-col class="bgcolor-heading bdr">9s</ion-col>
+					<ion-col class="bgcolor-heading bdr">Ms</ion-col>
 				</ion-row>
 				<ion-row>
 					<ion-col class="">&nbsp;</ion-col>
