--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,7 +4,7 @@
 		<ion-title>Archers Mate</ion-title>
 		<ion-buttons right>
 			<button ion-button (click)="GotoSettings()">
-				<ion-icon name="ios-more"></ion-icon>
+				<ion-icon name="ios-settings"></ion-icon>
 			</button>
 		</ion-buttons>
 	</ion-navbar>
