--- a/src/pages/stats/stats.html
+++ b/src/pages/stats/stats.html
@@ -13,4 +13,13 @@
     
     <ion-content no-bounce>
 
+			<p>
+				Get completed score card for isGuest = false.<br>
+				Get unique list of shooter names.<br>
+				Order names.<br>
+				Show names and ask who do you want to see stats for.<br>
+				Filters those names out and group group target distance, target size and bow used.<br>
+				Show total_rt for each score card.<br>
+			</p>
+
     </ion-content>
