--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -20,16 +20,16 @@
 			<field [label]="'Name'" [value]="app?.appName"></field>
 			<field [label]="'Version'" [value]="app?.versionNumber"></field>
 
-			<ion-item-divider color="archers-light-blue">Dummy Score Cards</ion-item-divider>
+			<ion-item-divider color="archers-light-blue">Test Score Cards</ion-item-divider>
 
 			<ion-item>
 				<ion-grid>
 					<ion-row>
 						<ion-col>
-							<button ion-button item-right block (click)="DeleteAllDummyScoreCard()" color="danger">Delete all</button>
+							<button ion-button item-right block (click)="DeleteAllTestScoreCard()" color="danger">Delete all</button>
 						</ion-col>
 						<ion-col>
-							<button ion-button item-right block (click)="AskForAmountOfDummyScoreCards()" color="archers-heading">Create</button>
+							<button ion-button item-right block (click)="AskForAmountOfTestScoreCards()" color="archers-heading">Create</button>
 						</ion-col>
 					</ion-row>
 				</ion-grid>
