--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -32,7 +32,16 @@
 				<button ion-button class="menu" (click)="GotoStats()">Statistics</button>
 			</ion-col>
 		</ion-row>
-
+<!--
+		<ion-row justify-content-center align-items-center class="history">
+			<ion-col>
+				<button ion-button class="menu" (click)="a()">Save</button>
+			</ion-col>
+			<ion-col>
+				<button ion-button class="menu" (click)="b()">Get</button>
+			</ion-col>
+		</ion-row>
+	-->
     </ion-grid>
  
 </ion-content>
