--- a/src/pages/score/score-card-setup/score-card-setup.html
+++ b/src/pages/score/score-card-setup/score-card-setup.html
@@ -38,6 +38,10 @@
 		<ion-item-group reorder="true" (ionItemReorder)="reorderItems($event)" *ngIf="scoreCard.status=='ongoing'">
 			<ion-item-sliding #slidingItem *ngFor="let shooter of scoreCard.shooters; let i = index;">
 				<ion-item [ngClass]="i%2 != 0 ? 'evenRow' : ''">
+						<ion-thumbnail item-start>
+							<img *ngIf="shooter?.image.default==null" src="assets/imgs/no-user-image.gif" />
+							<img *ngIf="shooter?.image.default!=null" src="{{ shooter?.image.default }}">
+						</ion-thumbnail>
 					<h2>{{ shooter.initials }} : {{ shooter.name }}</h2>
 				</ion-item>
 				<ion-item-options side="right">
@@ -48,6 +52,10 @@
 
 		<div *ngIf="scoreCard.status!='ongoing'">
 			<ion-item *ngFor="let shooter of scoreCard.shooters; let i = index" [ngClass]="i%2 != 0 ? 'evenRow' : ''">
+				<ion-thumbnail item-start>
+					<img *ngIf="shooter?.image.default==null" src="assets/imgs/no-user-image.gif" />
+					<img *ngIf="shooter?.image.default!=null" src="{{ shooter?.image.default }}">
+				</ion-thumbnail>
 				<shooter-scorecard [shooter]="shooter" [index]="i"></shooter-scorecard>
 			</ion-item>
 		</div>
