--- a/src/pages/settings/menu/shooters/shooters.html
+++ b/src/pages/settings/menu/shooters/shooters.html
@@ -19,8 +19,8 @@
 
 		<button ion-item (click)="UpdateShooter(shooter)"> 
 			<ion-thumbnail item-start>
-				<img *ngIf="shooter?.image?.default==null" src="assets/imgs/no-user-image.gif" />
-				<img *ngIf="shooter?.image?.default!=null" src="{{ shooter?.image?.default }}">
+				<img *ngIf="shooter?.image==null" src="assets/imgs/no-user-image.gif" />
+				<img *ngIf="shooter?.image!=null" src="{{ shooter.image }}">
 			</ion-thumbnail>
 			<shooter [shooter]="shooter"></shooter>
 		</button>
@@ -38,8 +38,8 @@
 			<ion-item-sliding #slidingItem *ngFor="let shooter of shooters; let i = index">
 				<button ion-item (click)="UpdateShooter(shooter)" *ngIf="!shooter.isDefault" [ngClass]="i%2 != 0 ? 'evenRow' : ''">        
 					<ion-thumbnail item-start>
-						<img *ngIf="shooter?.image?.default==null" src="assets/imgs/no-user-image.gif" />
-						<img *ngIf="shooter?.image?.default!=null" src="{{ shooter.image?.default }}">
+						<img *ngIf="shooter?.image==null" src="assets/imgs/no-user-image.gif" />
+						<img *ngIf="shooter?.image!=null" src="{{ shooter.image }}">
 					</ion-thumbnail>
 					<shooter [shooter]="shooter"></shooter>
 				</button>
