--- a/src/pages/settings/menu/general/general.html
+++ b/src/pages/settings/menu/general/general.html
@@ -25,6 +25,11 @@
     		<ion-toggle [(ngModel)]="setting.showToastOnScoreInput"></ion-toggle>
 		</ion-item>
 
+		<ion-item>
+			<ion-label fixed>Shooter Image Quality</ion-label>
+			<ion-input type="number" [(ngModel)]="setting.shooterImageQuality" maxlength="3" placeholder="75"></ion-input>				
+		</ion-item>
+
 	</ion-list>
  
 </ion-content>
